--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
            <div class="flex">
             <div class="logo">
-                <h1 class="fs-ph fw-bold">InnovetX</h1>
+                <h1 class=" fw-bold" style="text-transform: uppercase;"> <i class="fa-brands fa-slack"></i> InnovetX</h1>
             </div>
             <nav>
                 <ul class="flex">
@@ -57,10 +57,11 @@
     </header>
 
     <main role="main">
+
         <div class="hero">
             <div class="container">
                 <div class="even-columns">
-                    <div class="content">
+                    <div class="content flow">
                         <span>Learn from us</span>
                         <h1 class="fs-ph fw-bold ">
                             Better Learning Better Living
@@ -68,17 +69,55 @@
                         <p class="fs-reguler fw-reguler">
                             Why we are best learning platform in the world? Teaching is done by experienced teachers. Good is taught at a low cost.
                         </p>
-                        <button class="button">
-                            Start Your Course <i class="fa-solid fa-arrow-right"></i>
-                        </button>
-                        <span><i class="fa-solid fa-play"></i></span>
+                        <div class="cta">
+                            <button class="button">
+                                Start Your Course <i class="fa-solid fa-arrow-right"></i>
+                            </button>
+                            <span><i class="fa-solid fa-play"></i></span>
+                        </div>
                     </div>
-                    <div class="blank">
-                        <h1 class="fs-ph fw-bold">Hellow world</h1>
-                    </div>
+                    <div class="blank"></div>
                 </div>
             </div>
         </div>
+
+            <!-- ========= About us ========== -->
+        <section class="about-us">
+            <div class="container">
+                <div class="even-columns">
+                    <div class="left">
+                        <div class="img-1"><img src="Image/img1.jpg" alt="Image 01"></div>
+                        <div class="img-2"><img src="Image/img2.jpg" alt="Image 02"></div>
+                    </div>
+                    <div class="right">
+                        <h2 class="fw-bold fs-sh">Start profitable career with us what about Innovate X</h2>
+                        <p class="fs-body fw-reguler">
+                            Consequuntur atque bibendum sequi vivamus aliqua senectus hendrerit consectet 
+                            tristique, consequatur laborum unde, aliquet laboris cillum sollicitudin pretium
+                        </p>
+
+                        <div class="about1 flex">
+                            <i class="fa-solid fa-sun"></i>
+                            <div class="about-info">
+                                <h5 class="fs-subh fw-bold">24/7 Support Online-Offline</h5>
+                                <p class="fs-body ">Commodo numquam occaecati ullamcorper, aliqua eget. Repellendus aute sem saepe.</p>
+                            </div>
+                        </div>
+                        <div class="about2 flex">
+                            <i class="fa-solid fa-sun"></i>
+                            <div class="about-info">
+                                <h5 class="fs-subh fw-bold">Well Teaching System</h5>
+                                <p class="fs-body ">Commodo numquam occaecati ullamcorper, aliqua eget. Repellendus aute sem saepe.</p>
+                            </div>
+                        </div>
+
+                        <button class="button">
+                            Enroll Course  <i class="fa-solid fa-caret-right"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
