--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="container">
                 <div class="even-columns">
                     <div class="content flow">
-                        <span>Learn from us</span>
+                        <span class="top-text">Learn from us</span>
                         <h1 class="fs-ph fw-bold ">
                             Better Learning Better Living
                         </h1>
@@ -118,6 +118,114 @@
                 </div>
             </div>
         </section>
+
+        <!-- =========== Course Section ========== -->
+
+        <section class="course">
+            <div class="container">
+                <div class="headline-nav">
+                    <h2 class="fs-sh fw-bold">Our awesome courses</h2>
+                    <div class="catagory-btn flex">
+                       <div class="button-container">
+                        <button role="button" class="cat-btn">All</button>
+                       <button role="button" class="cat-btn">Science</button>
+                       <button role="button" class="cat-btn">Engineering</button>
+                       <button role="button" class="cat-btn">Graphics Design</button>
+                       <button role="button" class="cat-btn">Digital Marketing</button>
+                       </div>
+                       <div class="total-view flex">
+                        <h3>Total Courses</h3>
+                        <a href="#">View All</a>
+                       </div>
+                    </div>
+                </div>
+
+                <div class="course-sub">
+                    <div class="sub-box flow">
+                        <div class="thumb">
+                            <img src="./Image/online-learning-courses.jpg" alt="">
+                            <span class="sell-count">Enroled 390</span>
+                        </div>
+                        <div class="trainer flex">
+                            <img src="./Image/profil.jpg" alt="" class="profil">
+                            <h5 class="fs-subh fw-semi-bold">Md Shalehin</h5>
+                        </div>
+                        <h3 class="fs-subh fw-bold">Computer Science Course 42</h3>
+                        <p class="fs-body fw-reguler">Conubia egestas eos laboris netus velit mi aliquid aute euismod, integer? Quo class taciti labore</p>
+
+                        <div class="sell-cta flex">
+                            <span> <i class="fa-brands fa-leanpub"></i> 26 lesson</span>
+                            <h5 class="fs-subh fw-bold">Price: 80$</h5>
+                        </div>
+                        <button class="button">Enrole Now</button>
+                    </div>
+
+                    <div class="sub-box flow">
+                        <div class="thumb">
+                            <img src="./Image/online-learning-courses.jpg" alt="">
+                            <span class="sell-count">Enroled 390</span>
+                        </div>
+                        <div class="trainer flex">
+                            <img src="" alt="">
+                            <h5 class="fs-subh fw-semi-bold">Md Shalehin</h5>
+                        </div>
+                        <h3 class="fs-subh fw-bold">Computer Science Course 42</h3>
+                        <p class="fs-body fw-reguler">Conubia egestas eos laboris netus velit mi aliquid aute euismod, integer? Quo class taciti labore</p>
+
+                        <div class="sell-cta flex">
+                            <span> <i class="fa-brands fa-leanpub"></i> 26 lesson</span>
+                            <h5 class="fs-subh fw-bold">Price: 80$</h5>
+                        </div>
+                        <button class="button">Enrole Now</button>
+                    </div>
+
+
+
+                    <div class="sub-box flow">
+                        <div class="thumb">
+                            <img src="./Image/online-learning-courses.jpg" alt="">
+                            <span class="sell-count">Enroled 390</span>
+                        </div>
+                        <div class="trainer flex">
+                            <img src="" alt="">
+                            <h5 class="fs-subh fw-semi-bold">Md Shalehin</h5>
+                        </div>
+                        <h3 class="fs-subh fw-bold">Computer Science Course 42</h3>
+                        <p class="fs-body fw-reguler">Conubia egestas eos laboris netus velit mi aliquid aute euismod, integer? Quo class taciti labore</p>
+
+                        <div class="sell-cta flex">
+                            <span> <i class="fa-brands fa-leanpub"></i> 26 lesson</span>
+                            <h5 class="fs-subh fw-bold">Price: 80$</h5>
+                        </div>
+                        <button class="button">Enrole Now</button>
+                    </div>
+
+
+                    <div class="sub-box flow">
+                        <div class="thumb">
+                            <img src="./Image/online-learning-courses.jpg" alt="">
+                            <span class="sell-count">Enroled 390</span>
+                        </div>
+                        <div class="trainer flex">
+                            <img src="" alt="">
+                            <h5 class="fs-subh fw-semi-bold">Md Shalehin</h5>
+                        </div>
+                        <h3 class="fs-subh fw-bold">Computer Science Course 42</h3>
+                        <p class="fs-body fw-reguler">Conubia egestas eos laboris netus velit mi aliquid aute euismod, integer? Quo class taciti labore</p>
+
+                        <div class="sell-cta flex">
+                            <span> <i class="fa-brands fa-leanpub"></i> 26 lesson</span>
+                            <h5 class="fs-subh fw-bold">Price: 80$</h5>
+                        </div>
+                        <button class="button">Enrole Now</button>
+                    </div>
+
+                    
+                </div>
+            </div>
+        </section>
+
+
     </main>
     
 </body>
