--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                        </div>
                        <div class="total-view flex">
                         <h3>Total Courses</h3>
-                        <a href="#">View All</a>
+                        <a href="#" class="fs-subh fw-bold">View All</a>
                        </div>
                     </div>
                 </div>
@@ -147,8 +147,8 @@
                             <span class="sell-count">Enroled 390</span>
                         </div>
                         <div class="trainer flex">
-                            <img src="./Image/profil.jpg" alt="" class="profil">
-                            <h5 class="fs-subh fw-semi-bold">Md Shalehin</h5>
+                            <img src="./Image/FjU2lkcWYAgNG6d.jpg" alt="" class="profil">
+                            <h5 class="fs-subh fw-semi-bold">Jhone Fay</h5>
                         </div>
                         <h3 class="fs-subh fw-bold">Computer Science Course 42</h3>
                         <p class="fs-body fw-reguler">Conubia egestas eos laboris netus velit mi aliquid aute euismod, integer? Quo class taciti labore</p>
@@ -157,7 +157,9 @@
                             <span> <i class="fa-brands fa-leanpub"></i> 26 lesson</span>
                             <h5 class="fs-subh fw-bold">Price: 80$</h5>
                         </div>
-                        <button class="button">Enrole Now</button>
+                        <div class="center">
+                            <button class="button">Enrole Now</button>
+                        </div>
                     </div>
 
                     <div class="sub-box flow">
@@ -166,8 +168,8 @@
                             <span class="sell-count">Enroled 390</span>
                         </div>
                         <div class="trainer flex">
-                            <img src="" alt="">
-                            <h5 class="fs-subh fw-semi-bold">Md Shalehin</h5>
+                            <img src="./Image/FjU2lkcWYAgNG6d.jpg" alt="" class="profil">
+                            <h5 class="fs-subh fw-semi-bold">Jhone Fay</h5>
                         </div>
                         <h3 class="fs-subh fw-bold">Computer Science Course 42</h3>
                         <p class="fs-body fw-reguler">Conubia egestas eos laboris netus velit mi aliquid aute euismod, integer? Quo class taciti labore</p>
@@ -176,7 +178,9 @@
                             <span> <i class="fa-brands fa-leanpub"></i> 26 lesson</span>
                             <h5 class="fs-subh fw-bold">Price: 80$</h5>
                         </div>
-                        <button class="button">Enrole Now</button>
+                        <div class="center">
+                            <button class="button">Enrole Now</button>
+                        </div>
                     </div>
 
 
@@ -187,8 +191,8 @@
                             <span class="sell-count">Enroled 390</span>
                         </div>
                         <div class="trainer flex">
-                            <img src="" alt="">
-                            <h5 class="fs-subh fw-semi-bold">Md Shalehin</h5>
+                            <img src="./Image/FjU2lkcWYAgNG6d.jpg" alt="" class="profil">
+                            <h5 class="fs-subh fw-semi-bold">Jhone Fay</h5>
                         </div>
                         <h3 class="fs-subh fw-bold">Computer Science Course 42</h3>
                         <p class="fs-body fw-reguler">Conubia egestas eos laboris netus velit mi aliquid aute euismod, integer? Quo class taciti labore</p>
@@ -197,7 +201,9 @@
                             <span> <i class="fa-brands fa-leanpub"></i> 26 lesson</span>
                             <h5 class="fs-subh fw-bold">Price: 80$</h5>
                         </div>
-                        <button class="button">Enrole Now</button>
+                        <div class="center">
+                            <button class="button">Enrole Now</button>
+                        </div>
                     </div>
 
 
@@ -207,8 +213,8 @@
                             <span class="sell-count">Enroled 390</span>
                         </div>
                         <div class="trainer flex">
-                            <img src="" alt="">
-                            <h5 class="fs-subh fw-semi-bold">Md Shalehin</h5>
+                            <img src="./Image/FjU2lkcWYAgNG6d.jpg" alt="" class="profil">
+                            <h5 class="fs-subh fw-semi-bold">Jhone Fay</h5>
                         </div>
                         <h3 class="fs-subh fw-bold">Computer Science Course 42</h3>
                         <p class="fs-body fw-reguler">Conubia egestas eos laboris netus velit mi aliquid aute euismod, integer? Quo class taciti labore</p>
@@ -217,7 +223,47 @@
                             <span> <i class="fa-brands fa-leanpub"></i> 26 lesson</span>
                             <h5 class="fs-subh fw-bold">Price: 80$</h5>
                         </div>
-                        <button class="button">Enrole Now</button>
+                        <div class="center">
+                            <button class="button">Enrole Now</button>
+                        </div>
+                    </div>
+
+                    
+                </div>
+                <div class="center mtb">
+                    <button class="button">View All Courses <i class="fa fa-arrow-right"></i></button>
+                </div>
+            </div>
+        </section>
+
+        <!-- ============= Growth ============= -->
+        <section class="growth">
+            <div class="container">
+                <div class="box-even">
+                    <div class="growth-box center">
+                        <div class="icon fs-ph"><i class="fa-solid fa-handshake"></i></div>
+                        <span class="fs-ph fw-bold">540</span>
+                        <p class="fs-body fw-reguler">Successfully Project</p>
+                    </div>
+
+                    <div class="growth-box center">
+                        <div class="icon fs-ph"><i class="fa-solid fa-handshake"></i></div>
+                        <span class="fs-ph fw-bold">540</span>
+                        <p class="fs-body fw-reguler">Successfully Project</p>
+                    </div>
+
+
+                    <div class="growth-box center">
+                        <div class="icon fs-ph"><i class="fa-solid fa-handshake"></i></div>
+                        <span class="fs-ph fw-bold">540</span>
+                        <p class="fs-body fw-reguler">Successfully Project</p>
+                    </div>
+
+
+                    <div class="growth-box center">
+                        <div class="icon fs-ph"><i class="fa-solid fa-handshake"></i></div>
+                        <span class="fs-ph fw-bold">540</span>
+                        <p class="fs-body fw-reguler">Successfully Project</p>
                     </div>
 
                     
