--- a/index.html
+++ b/index.html
@@ -237,33 +237,38 @@
         </section>
 
         <!-- ============= Growth ============= -->
-        <section class="growth">
+        <section class="growth ">
             <div class="container">
-                <div class="box-even">
-                    <div class="growth-box center">
-                        <div class="icon fs-ph"><i class="fa-solid fa-handshake"></i></div>
-                        <span class="fs-ph fw-bold">540</span>
-                        <p class="fs-body fw-reguler">Successfully Project</p>
+                <div class="box-even center">
+                    <div class="growth-container">
+                        <div class="growth-box center">
+                            <div class="icon fs-ph"><i class="fa-solid fa-handshake"></i></div>
+                            <span class="fs-ph fw-bold">540+</span>
+                            <p class="fs-body fw-reguler">Successfully Project</p>
+                        </div>
                     </div>
 
-                    <div class="growth-box center">
-                        <div class="icon fs-ph"><i class="fa-solid fa-handshake"></i></div>
-                        <span class="fs-ph fw-bold">540</span>
-                        <p class="fs-body fw-reguler">Successfully Project</p>
+                    <div class="growth-container">
+                        <div class="growth-box center">
+                            <div class="icon fs-ph"><i class="fa-solid fa-handshake"></i></div>
+                            <span class="fs-ph fw-bold">540+</span>
+                            <p class="fs-body fw-reguler">Successfully Project</p>
+                        </div>
                     </div>
 
-
-                    <div class="growth-box center">
-                        <div class="icon fs-ph"><i class="fa-solid fa-handshake"></i></div>
-                        <span class="fs-ph fw-bold">540</span>
-                        <p class="fs-body fw-reguler">Successfully Project</p>
+                    <div class="growth-container">
+                        <div class="growth-box center">
+                            <div class="icon fs-ph"><i class="fa-solid fa-handshake"></i></div>
+                            <span class="fs-ph fw-bold">540+</span>
+                            <p class="fs-body fw-reguler">Successfully Project</p>
+                        </div>
                     </div>
-
-
-                    <div class="growth-box center">
-                        <div class="icon fs-ph"><i class="fa-solid fa-handshake"></i></div>
-                        <span class="fs-ph fw-bold">540</span>
-                        <p class="fs-body fw-reguler">Successfully Project</p>
+                    <div class="growth-container">
+                        <div class="growth-box">
+                            <div class="icon fs-ph"><i class="fa-solid fa-handshake"></i></div>
+                            <span class="fs-ph fw-bold">540+</span>
+                            <p class="fs-body fw-reguler">Successfully Project</p>
+                        </div>
                     </div>
 
                     
@@ -271,6 +276,50 @@
             </div>
         </section>
 
+        <!-- ============ Letchurar Profile =========== -->
+        <section class="lecturer">
+            <div class="container">
+                <div class="title-section">
+                    <div class="lecture center" data-text="Lecure">
+                        <span>Lecture</span>
+                        <h2 class="fs-sh fw-bold">Highly experienced teachers</h2>
+                    </div>
+                </div>
+
+
+                <div class="profile-container mt">
+                    <div class="box-even">
+                        <div class="profile">
+                            <img src="./Image/happy-ma.avif" alt="Profile">
+                            <h2 class="fs-subh fw-bold">Melvin Roy</h2>
+                            <span>Machine Learning</span>
+                        </div>
+                        <div class="profile">
+                            <img src="./Image/profile 01.jpg" alt="Profile">
+                            <h2 class="fs-subh fw-bold">Melvin Roy</h2>
+                            <span>Machine Learning</span>
+                        </div>
+                        <div class="profile">
+                            <img src="./Image/profile 02.jpg" alt="Profile">
+                            <h2 class="fs-subh fw-bold">Melvin Roy</h2>
+                            <span>Machine Learning</span>
+                        </div>
+                        <div class="profile">
+                            <img src="./Image/profile 04.jpeg" alt="Profile">
+                            <h2 class="fs-subh fw-bold">Melvin Roy</h2>
+                            <span>Machine Learning</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ================= Client's ============ -->
+         <section class="clintes">
+            <div class="container center">
+                <div class="content-box"></div>
+            </div>
+         </section>
 
     </main>
     
