--- a/index.html
+++ b/index.html
@@ -314,14 +314,93 @@
             </div>
         </section>
 
-        <!-- ================= Client's ============ -->
-         <section class="clintes">
+        <!-- ================= Follow-us ============ -->
+         <section class="follow-us">
             <div class="container center">
-                <div class="content-box"></div>
+                <div class="content">
+                    <div class="even-columns">
+                        <div class="student">
+                            <h2 class="fs-sh fw-bold" >Become a learner</h2>
+                            <p class="fs-body fw-reguler">Are you knowledge base tell just some words we will came back within 5 minutes</p>
+                            <div class="input-form flex">
+                                <input type="email" placeholder="Email Address" required  class="as-student">
+                                <input type="submit" class="student-btn" value="JOIN AS STUDENT">
+                            </div>
+                        </div>
+                        <div class="teacher">
+                            <h2 class="fs-sh fw-bold" >Become a Teacher</h2>
+                            <p class="fs-body fw-reguler">Are you knowledge base tell just some words we will came back within 5 minutes</p>
+                            <div class="teacher-input-form flex">
+                                <input type="email" placeholder="Email Address" required  class="as-teacher">
+                                <input type="submit" class="teacher-btn" value="JOIN us">
+                            </div>
+                        </div>
+                    </div>
+                </div>                
             </div>
          </section>
 
+         <!-- =============== Colaborate Brands ================= -->
+          <section class="brands">
+            <div class="container">
+                <div class="box-even">
+                    <div class="brand">
+                        <img src="./Image/FedEx-Logo-PNG-Transparent.png" alt="">
+                    </div>
+                    <div class="brand">
+                        <img src="./Image/FedEx-Logo-PNG-Transparent.png" alt="">
+                    </div>
+                    <div class="brand">
+                        <img src="./Image/FedEx-Logo-PNG-Transparent.png" alt="">
+                    </div>
+                    <div class="brand">
+                        <img src="./Image/FedEx-Logo-PNG-Transparent.png" alt="">
+                    </div>
+                </div>
+            </div>
+          </section>
+          
+
     </main>
+
+    <footer>
+        <div class="container">
+            <div class="contact">
+                <div class="box-even">
+                    <div class="location footer-flex margine-auto">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <div class="address">
+                            <h4 class="fs-subh fw-bold">Head office</h4>
+                            <p>454 read, 36 Floor New York, USA</p>
+                        </div>
+                    </div>
+                    <div class="phone footer-flex margine-auto">
+                        <i class="fa-solid fa-phone-volume"></i>
+                        <div class="call">
+                            <h4 class="fs-subh fw-bold">Head office</h4>
+                            <p>454 read, 36 Floor New York, USA</p>
+                        </div>
+                    </div>
+                    <div class="email footer-flex margine-auto">
+                        <i class="fa-regular fa-envelope"></i>
+                        <div class="mail">
+                            <h4 class="fs-subh fw-bold">Head office</h4>
+                            <p>454 read, 36 Floor New York, USA</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="copyright">
+            <div class="container">
+                <div class="flex">
+                    <p>All <strong>Copyright</strong> Reserved by</p>
+                    <span>Md. Shalehin</span>
+                </div>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
